# nilor-cli

./: .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  http-client.private.env.json.example  pytest.ini  setup_venv.sh
infrastructure/: main.tf  variables.tf
src/: .dockerignore  agent_service.py  auth.py  chat.py  chat_service.py  main.py  pyproject.toml  requirements.txt  tag.py  tool_search.py  utilities.py
tests/: conftest.py  integration_tests.http  test_chat.py  test_chat_service.py  test_main.py
